--- a/Science_Exhibition.html
+++ b/Science_Exhibition.html
@@ -9,48 +9,73 @@
             font-family: sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0; /* Light background */
+            background-color: #f0f0f0;
             display: flex;
             flex-direction: column;
-            align-items: center; /* Center content horizontally */
-            min-height: 100vh; /* Ensure full viewport height */
+            align-items: center;
+            min-height: 100vh;
         }
 
-      .container {
-            width: 90%; /* Responsive width */
-            max-width: 960px; /* Maximum width on larger screens */
-            padding: 10px;
+        .container {
+            width: 90%; /* Occupy most of the screen */
+            max-width: 960px; /* Limit width on larger screens */
+            padding: 20px;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px; /* Add some top margin */
-            border-radius: 8px; /* Rounded corners */
+            margin-top: 20px;
+            border-radius: 8px;
+            box-sizing: border-box;
         }
 
-      .header {
-            text-align: center;
+        .header {
+            display: flex;
+            align-items: center; /* Vertically align */
+            justify-content: center; /* Center horizontally */
             margin-bottom: 20px;
         }
 
-      .logo {
-            max-width: 200px; /* Adjust logo size */
+        .logo {
+            max-width: 150px;
             height: auto;
-      
+            margin-right: 20px;
         }
 
-      .headline {
-            font-size: 1.8em;
+        .headline {
+            font-size: 2em;
             font-weight: bold;
-            color: #333; /* Darker heading color */
-             margin-bottom: 10px;
+            color: #333;
+            margin: 0;
         }
 
-      .date {
+        .date {
             font-size: 1.2em;
-            color: #666; /* Slightly lighter date color */
+            color: #666;
             margin-bottom: 20px;
+            text-align: center; /* Center the date */
         }
 
-      .video-container {
+        .live-text {
+            text-align: center;
+            font-size: 2.5em;
+            font-weight: 600;
+            color: #e91e63;
+            margin-bottom: 20px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            animation: slide-in 1s ease-in-out;
+        }
+
+        @keyframes slide-in {
+            from {
+                transform: translateY(-20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .video-container {
             position: relative;
             padding-bottom: 56.25%; /* 16:9 aspect ratio */
             height: 0;
@@ -58,7 +83,7 @@
             margin-bottom: 20px;
         }
 
-      .video-container iframe {
+        .video-container iframe {
             position: absolute;
             top: 0;
             left: 0;
@@ -66,52 +91,91 @@
             height: 100%;
         }
 
-      .button-container {
-            text-align: center; /* Center the button */
+        .button-container {
+            text-align: center;
+            margin-bottom: 20px;
         }
 
-      .open-video-button {
-            background-color: #4CAF50; /* Green */
+        .open-video-button {
+            background-color: #4CAF50;
             border: none;
             color: white;
-            padding: 12px 24px;
+            padding: 20px 40px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 16px;
+            font-size: 24px;
             margin: 4px 2px;
             cursor: pointer;
-            border-radius: 5px; /* Rounded corners for the button */
+            border-radius: 5px;
         }
 
-        /* Responsive styles */
-        @media (max-width: 768px) {
-          .headline {
-                font-size: 1.5em;
+        .description {
+            text-align: center;
+            color: #555;
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+
+
+        /* Responsive Styles */
+        @media (max-width: 768px) { /* Mobile View */
+            .header {
+                flex-direction: column; /* Stack logo and name */
+                align-items: center;
+                text-align: center;
             }
-          .date {
-                font-size: 1em;
+
+            .logo {
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+
+            .headline {
+                font-size: 1.6em;
+            }
+            .date {
+                font-size: 1.1em;
+            }
+
+            .open-video-button {
+                font-size: 18px;
+                padding: 15px 30px;
+            }
+
+            .description {
+                font-size: 1.1em;
+            }
+
+            .live-text {
+                font-size: 2em;
             }
         }
+
+        /* Removed Laptop specific styles */
+        /* Content will now reflow naturally on larger screens */
+
     </style>
 </head>
 <body>
 
     <div class="container">
         <div class="header">
-            <img class="logo" width="120px" src="https://govardhanskillcentre.github.io/student/gsc%20logo.png" alt="School Logo">  <h1 class="headline">Govardhan skill centre</h1>
-            <p class="date">28th Feb - Science Day Exhibition</p>
+            <img class="logo" src="https://govardhanskillcentre.github.io/student/gsc%20logo.png" alt="School Logo">
+            <h1 class="headline">Govardhan Skill Centre</h1>
         </div>
+        <p class="date">28th Feb - Science Day Exhibition</p>
+        <p class="live-text">Live Now!</p>
 
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BPLp-quwfQk?si=vvARX9vhyWEjkKzV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe id="youtube-player" width="560" height="315" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <div class="button-container">
             <button class="open-video-button" onclick="openYouTubeVideo()">Watch Live on YouTube</button>
         </div>
 
-        <p>Our Govardhan Skill Centre</p>
+        <p class="description">Our Govardhan Skill Centre is dedicated to providing quality education and fostering a love for learning in students. We strive to create a nurturing environment where students can explore their potential and develop essential skills for success.</p>
     </div>
 
     <script>
@@ -120,10 +184,8 @@
             window.open(`https://www.youtube.com/watch?v=${videoId}`, '_blank');
         }
 
-        // Placeholder for initial video (you can dynamically set this if needed)
-        const initialVideoId = "YOUR_INITIAL_VIDEO_ID";  // Replace with the video ID you want to load initially
+        const initialVideoId = "BPLp-quwfQk"; // Replace with your initial video ID
         document.getElementById("youtube-player").src = `https://www.youtube.com/embed/${initialVideoId}`;
-
     </script>
 
 </body>
