Science_Exhibition.html

--- a/Science_Exhibition.html
+++ b/Science_Exhibition.html
@@ -168,7 +168,7 @@
         <p class="live-text">Live Now!</p>
 
         <div class="video-container">
-            <iframe id="youtube-player" width="560" height="315" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/ZBlVpLuq7yo?si=mp-3ozuRPrEUF_oW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <div class="button-container">
@@ -180,7 +180,7 @@
 
     <script>
         function openYouTubeVideo() {
-            const videoId = "BPLp-quwfQk"; // Replace with your YouTube video ID
+            const videoId = "ZBlVpLuq7yo"; // Replace with your YouTube video ID
             window.open(`https://www.youtube.com/watch?v=${videoId}`, '_blank');
         }
 
