Science_Exhibition.html

--- a/Science_Exhibition.html
+++ b/Science_Exhibition.html
@@ -165,7 +165,7 @@
             <h1 class="headline">Govardhan Skill Centre</h1>
         </div>
         <p class="date">28th Feb - Science Day Exhibition</p>
-        <p class="live-text">Live Now!</p>
+        <p class="live-text">Live On 28th Feb</p>
 
         <div class="video-container">
            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZBlVpLuq7yo?si=mp-3ozuRPrEUF_oW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
