--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/live/xJ5TzGjJZNU?si=EGT0ipCvNaP3fJxF">
     <title>Redirecting to YouTube...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://www.youtube.com/live/xJ5TzGjJZNU?si=EGT0ipCvNaP3fJxF">click here</a>.</p>
 </body>
 </html>
