--- a/26-Jan-Republic-Day.html
+++ b/26-Jan-Republic-Day.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://youtube.com/live/-bmsaSljiKg?feature=share">
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/live/4b5S-InKS4o?si=BwjvnF3G1SaqJaEN">
     <title>Redirecting to YouTube...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://youtube.com/live/-bmsaSljiKg?feature=share">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://www.youtube.com/live/4b5S-InKS4o?si=BwjvnF3G1SaqJaEN">click here</a>.</p>
 </body>
 </html>
