--- a/28-february-science-exhibition.html
+++ b/28-february-science-exhibition.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/live/kI7k9qWVFvo?si=I2Q-D0jlG_Xl_WfE">
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/live/aPxgsdYHxm8?si=oA4_tFiBPRR60MU4">
     <title>Redirecting to YouTube...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.youtube.com/live/kI7k9qWVFvo?si=I2Q-D0jlG_Xl_WfE">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://www.youtube.com/live/aPxgsdYHxm8?si=oA4_tFiBPRR60MU4">click here</a>.</p>
 </body>
 </html>
